# platform.core.api.motion

./: CMakeLists.txt  LICENSE  motion.pc.in
doc/: activity_recognition_doc.h  gesture_recognition_doc.h
include/: activity_recognition.h  gesture_recognition.h
packaging/: motion.spec
src/: Activity.cpp  ActivityProxy.cpp  ActivityProxy.h  Gesture.cpp  GestureProxy.cpp  GestureProxy.h  SensorProxy.cpp  SensorProxy.h  TypesInternal.cpp  TypesInternal.h
src/activity/: activity.cpp  activity.h
src/gesture/: gesture.cpp  gesture.h  motion_engine.cpp  motion_engine.h
src/shared/: ctx_error.h  ctx_types_private.h  ctx_util_misc.cpp  ctx_util_misc.h  ctx_util_sensor.cpp  ctx_util_sensor.h  handle_map.h
